Use babel-cli to transpile after webpack build

--- a/webpack-cjs-demo/index.html
+++ b/webpack-cjs-demo/index.html
@@ -4,6 +4,6 @@
         <title>Test using commonjs and webpack 4</title>
     </head>
     <body>
-        <script src="./dist/app.bundle.js"></script>
+        <script src="./transpiled/app.bundle.js"></script>
     </body>
 </html>
