Make cjs demo more recognisable

--- a/webpack-cjs-demo/index.html
+++ b/webpack-cjs-demo/index.html
@@ -1,7 +1,7 @@
 <!doctype html5>
 <html>
     <head>
-        <title>Test using commonjs and webpack 4</title>
+        <title>CommonJS : Webpack 4 : Babel</title>
     </head>
     <body>
         <script src="./transpiled/app.bundle.js"></script>
