Try to duplicate cjs style in es6

--- a/webpack-demo/index.html
+++ b/webpack-demo/index.html
@@ -1,9 +1,9 @@
 <!doctype html5>
 <html>
     <head>
-        <title>Test my own shit</title>
+        <title>Test es6 style</title>
     </head>
     <body>
-        <script src="./dist/app.bundle.js"></script>
+        <script src="./transpiled/app.bundle.js"></script>
     </body>
 </html>
